tests/NormalTests/paczka1/small_fuzzy/36599736.err
Error in line 5: NvssvjELAb S934 89,5
Error in line 10: ZrfsB2hZ4Nv S934 34,4
Error in line 15: 2MBhGprE S130 206,74
